--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@syncfusion/ej2-angular-grids": "^25.1.40",
     "bootstrap": "^5.3.3",
     "ngx-toaster": "^1.0.1",
     "ngx-toastr": "^18.0.0",
